working on unit testing and organization